--- a/music/src/index.html
+++ b/music/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Music</title>
   <base href=".">
+  <link rel="stylesheet" type="text/css" href="vendor.css">
   <script src="vendor/systemjs/dist/system.src.js"></script>
   <script src="vendor/angular2/bundles/angular2.dev.js"></script>
   {{content-for 'head'}}
