--- a/music/src/index.html
+++ b/music/src/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="vendor.css">
   <script src="vendor/systemjs/dist/system.src.js"></script>
   <script src="vendor/angular2/bundles/angular2.dev.js"></script>
+  <script src="vendor/angular2/bundles/http.dev.js"></script>
   {{content-for 'head'}}
   <script>
     System.config({
